--- a/entries/about/about.html
+++ b/entries/about/about.html
@@ -5,6 +5,9 @@
     <title>About</title>
   </head>
   <body>
-    About
+    <h1>About</h1>
+    <blockquote>
+      This is the about text.
+    </blockquote>
   </body>
 </html>
