--- a/entries/about/about.html
+++ b/entries/about/about.html
@@ -9,5 +9,10 @@
     <blockquote>
       This is the about text.
     </blockquote>
+    <a class="waves-effect waves-light btn-large" href="#">Wave</a>
+    <br /><br />
+    <a class="waves-effect waves-yellow btn-large" href="#">Wave</a>
+    <br><br>
+    <a class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>button</a>
   </body>
 </html>
