--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>scaffold-webpack</title>
   </head>
   <body>
-    <app></app>
+    <div id="__vue"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
